Table "alembic_version" {
  "version_num" varchar(32) [pk, not null]
}

Table "users" {
  "id" int4 [pk, not null, increment]
  "email" varchar [unique, not null]
  "hashed_password" varchar [not null]
  "is_active" bool [not null, default: true]
  "is_superuser" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "first_name" varchar(50) [not null]
  "last_name" varchar(50)

  Indexes {
    id [type: btree, name: "ix_users_id"]
  }
}

Table "organizations" {
  "id" int4 [pk, not null, increment]
  "name" varchar [unique, not null]
  "description" varchar(255)
  "is_active" bool [not null, default: true]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    id [type: btree, name: "ix_organizations_id"]
  }
}

Table "roles" {
  "name" varchar(50) [unique, not null]
  "description" varchar(255)
  "id" int4 [pk, not null, increment]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    id [type: btree, name: "ix_roles_id"]
  }
}

Table "organization_memberships" {
  "organization_id" int4 [not null]
  "user_id" int4 [not null]
  "role_id" int4
  "id" int4 [pk, not null, increment]
  "is_default" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (organization_id, user_id) [type: btree, name: "uq_org_membership_org_user"]
    id [type: btree, name: "ix_organization_memberships_id"]
    organization_id [type: btree, name: "ix_organization_memberships_organization_id"]
    user_id [type: btree, name: "ix_organization_memberships_user_id"]
  }
}

Table "teams" {
  "name" varchar(100) [not null]
  "description" varchar(255)
  "organization_id" int4 [not null]
  "id" int4 [pk, not null, increment]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (organization_id, name) [type: btree, name: "uq_team_org_name"]
    id [type: btree, name: "ix_teams_id"]
    organization_id [type: btree, name: "ix_teams_org_id"]
  }
}

Table "team_user_roles" {
  "team_id" int4 [not null]
  "user_id" int4 [not null]
  "role_id" int4 [not null]
  "id" int4 [pk, not null, increment]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]

  Indexes {
    (team_id, user_id, role_id) [type: btree, name: "uq_team_user_role"]
    id [type: btree, name: "ix_team_user_roles_id"]
    team_id [type: btree, name: "ix_team_user_roles_team_id"]
    user_id [type: btree, name: "ix_team_user_roles_user_id"]
    (team_id, user_id) [type: btree, name: "ix_tur_team_user"]
  }
}

Ref "fk_organization_memberships_organization_id_organizations":"organizations"."id" < "organization_memberships"."organization_id" [delete: cascade]

Ref "fk_organization_memberships_role_id_roles":"roles"."id" < "organization_memberships"."role_id"

Ref "fk_organization_memberships_user_id_users":"users"."id" < "organization_memberships"."user_id" [delete: cascade]

Ref "fk_team_user_roles_role_id_roles":"roles"."id" < "team_user_roles"."role_id" [delete: restrict]

Ref "fk_team_user_roles_team_id_teams":"teams"."id" < "team_user_roles"."team_id" [delete: cascade]

Ref "fk_team_user_roles_user_id_users":"users"."id" < "team_user_roles"."user_id" [delete: cascade]

Ref "fk_teams_organization_id_organizations":"organizations"."id" < "teams"."organization_id" [delete: cascade]
